--- a/app/src/main/res/layout/newsview.xml
+++ b/app/src/main/res/layout/newsview.xml
@@ -3,23 +3,63 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#F4E1CC">
+
 
         <ImageView
+            android:scaleType="centerCrop"
             android:id="@+id/newsImage"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_height="200dp"
+            tools:srcCompat="@tools:sample/avatars"
+            android:contentDescription="@string/app_name" />
 
         <TextView
+            android:layout_marginEnd="5dp"
+            android:layout_marginStart="5dp"
+            android:background="#D5D6D6"
+            android:textColor="@color/black"
+            android:padding="2dp"
             android:id="@+id/news"
             android:layout_width="match_parent"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            tools:text="Qwerty uiop asdf ghjkl zxcvb"
+            tools:textColor="@color/black"
+            android:layout_height="25dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@color/black"/>
+
+        <TextView
+            android:id="@+id/description"
+            android:textColor="@color/black"
+            android:layout_marginBottom="2dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_below="@+id/imageView" />
-    </RelativeLayout>
+            android:background="#D5D6D6"
+            android:maxLines="2"
+            android:ellipsize="end"
+            tools:text="sadgfudilfydsajiouxdosd"
+            android:padding="5dp"/>
+
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
